--- a/src/Nancy.Simple.csproj
+++ b/src/Nancy.Simple.csproj
@@ -77,6 +77,7 @@
     <Compile Include="MainModule.cs" />
     <Compile Include="App.cs" />
     <Compile Include="PokerPlayer.cs" />
+    <Compile Include="Logger\LogHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config">
@@ -98,4 +99,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <Folder Include="Logger\" />
+  </ItemGroup>
 </Project>
