--- a/src/Nancy.Simple.csproj
+++ b/src/Nancy.Simple.csproj
@@ -72,16 +72,17 @@
   <ItemGroup>
     <Compile Include="Data\Card.cs" />
     <Compile Include="Data\GameState.cs" />
+    <Compile Include="Data\Player.cs" />
+    <Compile Include="Data\PlayerStatus.cs" />
     <Compile Include="Data\Rank.cs" />
     <Compile Include="Data\Suit.cs" />
     <Compile Include="Decisions.cs" />
+    <Compile Include="JSON\GameStateManager.cs" />
     <Compile Include="Randomness.cs" />
     <Compile Include="TwoPair.cs" />
     <Compile Include="Interface\IDecisionLogic.cs" />
     <Compile Include="MainModule.cs" />
     <Compile Include="App.cs" />
-    <Compile Include="Data\Player.cs" />
-    <Compile Include="Data\PlayerStatus.cs" />
     <Compile Include="PokerPlayer.cs" />
     <Compile Include="Logger\LogHelper.cs" />
   </ItemGroup>
@@ -105,7 +106,5 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup>
-    <Folder Include="Logger\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
