--- a/src/Nancy.Simple.csproj
+++ b/src/Nancy.Simple.csproj
@@ -70,6 +70,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AfterFlopAnalyse.cs" />
     <Compile Include="Decisions.cs" />
     <Compile Include="Randomness.cs" />
     <Compile Include="TwoPair.cs" />
