--- a/src/Nancy.Simple.csproj
+++ b/src/Nancy.Simple.csproj
@@ -68,6 +68,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Decisions\AbstractPair.cs" />
     <Compile Include="Decisions\HighCardAfterFlop.cs" />
     <Compile Include="Data\Card.cs" />
     <Compile Include="Data\GameState.cs" />
@@ -75,7 +76,6 @@
     <Compile Include="Data\PlayerStatus.cs" />
     <Compile Include="Data\Rank.cs" />
     <Compile Include="Data\Suit.cs" />
-    <Compile Include="Helpers.cs" />
     <Compile Include="Decisions\Pair.cs" />
     <Compile Include="Interface\IDecisionLogic.cs" />
     <Compile Include="MainModule.cs" />
